add authorization and authentication

--- a/UsersManager/appsettings.json
+++ b/UsersManager/appsettings.json
@@ -24,5 +24,9 @@
         }
       }
     ]
+  },
+  "Authorization": {
+    "TokenLifeTimeInMinutes": 60,
+    "RefreshTokenLifeTimeInDays": 30
   }
 }
